--- a/css/design.css
+++ b/css/design.css
@@ -1,21 +1,81 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*
++---------------------------+
+|                           |
+|                           |
+|                           |
+|     Landscape mode css    |
+|                           |
+|                           |
++---------------------------+
+*/
+
 @media only screen and (orientation:landscape){
 
 	header
 	{
-		height: 20px;
+		position: fixed;
+		top: 0;
+		width: 100%;
+		height: 30px;
 		background-color: #4C7622;
 	}
 
 	footer
 	{
-		height: 20px;
+		position: fixed;
+		bottom: 0;
+		width: 100%;
+		height: 30px;
 		background-color: #4C7622;
 	}
 
 	#main 
 	{
 		
-		width: 300px;
+		width: 420px;
+		margin-top: 40px;
 	}
 
 	#main p
@@ -24,43 +84,58 @@
 		padding-left: 5px;
 	}
 
-	.navigation a
+	.navigationland a
 	{
-		display: block;
-		background-color: #538522;
-		padding: 5px 25px;
 		color: #fff;
 		text-decoration: none;
 		border-radius: 15px;
 		text-align: center;
 	}
 
-	.navigation li 
+	.navigationland li 
 	{
-		display: none;
+		float: left;
 		margin: 0 auto;
-		margin: 15px;
-		margin-left: 55px;
-		width: 200px;
+		margin-left: 15px;
+		border-left: 1px solid #fff;
+		padding-left: 15px;
+		line-height: 12px;
+		margin-top: 8px;
 	}
 
-	.navigation li:nth-last-child(1)
+	.navigationland li:nth-child(1)
 	{
+		margin-left: 35px;
+		border: none;
+	}
+
+	.navigationland li:nth-last-child(1)
+	{
+		display: none;
 		margin-left: 15px;
 	}
 }
-
+/*
++---------------------------+
+|                           |
+|                           |
+|                           |
+|    Portrait mode css      |
+|                           |
+|                           |
++---------------------------+
+*/
 @media only screen and (orientation:portrait){
    /* portrait styles here */
 
 
 	#main 
 	{
-		display:none;
-		width: 320px;
+		margin-left: 60px;
+		width: 620px;
 	}
 
-	.navigation a
+	.navigationport a
 	{
 		display: block;
 		background-color: #538522;
@@ -71,17 +146,17 @@
 		text-align: center;
 	}
 
-	.navigation li 
+	.navigationport li 
 	{
 		margin: 0 auto;
 		margin: 15px;
-		margin-left: 55px;
+		margin-left: 285px;
 		width: 200px;
 	}
 
-	.navigation li:nth-last-child(1)
+	.navigationport li:nth-last-child(1)
 	{
-		margin-left: 15px;
+		margin-left: 245px;
 	}
 }
 
