--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@ input:invalid, textarea:invalid { background-color: #f0dddd; }
 table { border-collapse: collapse; border-spacing: 0; }
 td { vertical-align: top; }
 
-
 /* ==|== primary styles =====================================================
    Author:
    ========================================================================== */
@@ -111,7 +110,7 @@ textarea[contenteditable] {-webkit-appearance: none;}
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
-
+.clear {clear:both;}
 
 
 /* ==|== print styles ======================================================= */
